--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Колл-центр под ключ | Казахстан → США</title>
+  <title>Англоязычный колл-центр для экспорта в США | Казахстан</title>
+  <meta name="description" content="Полный цикл продаж на рынок США: носители языка, CRM, аналитика. Для казахстанского бизнеса.">
   <style>
     body {
       margin: 0;
@@ -120,6 +121,27 @@
       box-shadow: 0 6px 15px rgba(212, 175, 55, 0.4);
       background: linear-gradient(135deg, #F5D78E, #D4AF37);
     }
+    .testimonials {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+      margin-top: 2rem;
+    }
+    .testimonial {
+      flex: 1 1 300px;
+      background: #252525;
+      padding: 1.5rem;
+      border-radius: 8px;
+      border-left: 3px solid #D4AF37;
+    }
+    .testimonial p {
+      font-style: italic;
+      margin-bottom: 0.5rem;
+    }
+    .testimonial-author {
+      font-weight: 600;
+      color: #F5D78E;
+    }
     footer {
       text-align: center;
       padding: 3rem 1rem 1rem;
@@ -143,50 +165,55 @@
 </head>
 <body>
   <div class="container">
-    <h1>Англоязычный колл-центр под ключ</h1>
-    <p class="tagline">Для бизнеса из Казахстана, выходящего на рынок США</p>
+    <h1>Англоязычный колл-центр для выхода на рынок США</h1>
+    <p class="tagline">Полный цикл продаж для казахстанского бизнеса: носители языка, CRM, аналитика результатов</p>
 
     <div class="block">
-      <h2>Для клиентов</h2>
+      <h2>Комплексное решение для экспорта</h2>
       <ul>
-        <li>$40,000 — международные продажи</li>
-        <li>Операторы — носители языка из Африки (дешевле и с отличным акцентом)</li>
-        <li>Прозрачный результат: звонки, лиды, продажи</li>
-        <li>Включены: CRM, скрипты, аналитика</li>
-        <li>Отдел, который продаст ваш продукт правильно и грамотно</li>
+        <li><strong>Готовые продажи за $40,000</strong> - работаем на результат</li>
+        <li><strong>Профессиональные операторы</strong> - носители английского из Африки (идеальный акцент + экономия 60%)</li>
+        <li><strong>Полная автоматизация</strong> - предоставляем CRM, скрипты продаж, аналитику в реальном времени</li>
+        <li><strong>Прозрачность</strong> - видите каждый звонок, лид и сделку</li>
+        <li><strong>Под ключ</strong> - от подбора персонала до отчетов по ROI</li>
       </ul>
       <div class="buttons">
-        <a class="btn" href="https://t.me/doizv">Telegram</a>
-        <a class="btn" href="https://wa.me/77003339904">WhatsApp</a>
+        <a class="btn" href="https://t.me/doizv">Обсудить проект в Telegram</a>
+        <a class="btn" href="https://wa.me/77003339904">Консультация в WhatsApp</a>
       </div>
     </div>
 
     <div class="block">
-      <h2>Партнёрская программа — $2000 с продажи</h2>
+      <h2>Партнерская программа</h2>
       <ul>
-        <li>У нас — горячий оффер с конверсией 6%</li>
-        <li>Первые 3 партнера получат бонус +$500</li>
-        <li>Закрываем клиента за вас</li>
-        <li>Переходи по ссылке</li>
+        <li><strong>$2000 за каждого привлеченного клиента</strong> - выплаты без задержек</li>
+        <li><strong>Горячее предложение</strong> - конверсия 6% благодаря отработанной методике</li>
+        <li><strong>Бонус +$500</strong> первым 3 партнерам</li>
+        <li><strong>Полная поддержка</strong> - мы сами ведем переговоры и закрываем сделки</li>
+        <li><strong>Готовые материалы</strong> - презентации, скрипты, ответы на возражения</li>
       </ul>
       <div class="buttons">
-        <a class="btn" href="https://t.me/+JgoYeT6PCDU0ZmRi">Стать партнёром</a>
+        <a class="btn" href="https://t.me/+JgoYeT6PCDU0ZmRi">Стать партнером</a>
       </div>
     </div>
 
     <div class="block">
-      <h2>Предложение для казахстанского бизнеса</h2>
-      <ul>
-        <li>Готовы продавать в США, но нет команды?</li>
-        <li>Операторы из Африки: идеальный акцент и в 5 раз дешевле</li>
-        <li>CRM + аналитика + автоматизация</li>
-        <li>Подходит компаниям с продуктом для зарубежного рынка</li>
-      </ul>
+      <h2>Почему выбирают нас?</h2>
+      <div class="testimonials">
+        <div class="testimonial">
+          <p>"За 3 месяца увеличили наши продажи в США на 217%. Операторы действительно с нейтральным акцентом."</p>
+          <div class="testimonial-author">- Директор по экспорту, пищевая компания</div>
+        </div>
+        <div class="testimonial">
+          <p>"Как партнер заработал $8000 за месяц. Все честно - выплатили ровно то, что обещали."</p>
+          <div class="testimonial-author">- Маркетолог, Алматы</div>
+        </div>
+      </div>
       <div class="buttons">
-        <a class="btn" href="https://wa.me/77003339904">Связаться сейчас</a>
+        <a class="btn" href="https://wa.me/77003339904">Начать работать с нами</a>
       </div>
     </div>
   </div>
-  <footer>© 2025 states.kz</footer>
+  <footer>© 2025 states.kz | Англоязычный колл-центр для казахстанского бизнеса</footer>
 </body>
 </html>
