--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Англоязычный колл-центр для экспорта в США | Казахстан</title>
-  <meta name="description" content="Полный цикл продаж на рынок США: носители языка, CRM, аналитика. Для казахстанского бизнеса.">
+  <title>Колл-центр под ключ для США | Казахстан</title>
+  <meta name="description" content="Готовый колл-центр для экспорта товаров из Казахстана в США. Продажи, CRM, аналитика, носители языка.">
+  <meta property="og:title" content="Колл-центр под ключ для США | Казахстан">
+  <meta property="og:description" content="Полный цикл продаж на рынок США: англоязычные операторы, CRM, аналитика. Для казахстанского бизнеса.">
+  <meta property="og:url" content="https://fhhrth.github.io/states.kz/">
+  <meta property="og:type" content="website">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <style>
     body {
       margin: 0;
@@ -171,11 +176,11 @@
     <div class="block">
       <h2>Комплексное решение для экспорта</h2>
       <ul>
-        <li><strong>Готовые продажи за $40,000</strong> - работаем на результат</li>
-        <li><strong>Профессиональные операторы</strong> - носители английского из Африки (идеальный акцент + экономия 60%)</li>
-        <li><strong>Полная автоматизация</strong> - предоставляем CRM, скрипты продаж, аналитику в реальном времени</li>
-        <li><strong>Прозрачность</strong> - видите каждый звонок, лид и сделку</li>
-        <li><strong>Под ключ</strong> - от подбора персонала до отчетов по ROI</li>
+        <li><strong>Готовые продажи за $40,000</strong> — работаем на результат</li>
+        <li><strong>Профессиональные операторы</strong> — носители английского из Африки (идеальный акцент + экономия 60%)</li>
+        <li><strong>Полная автоматизация</strong> — предоставляем CRM, скрипты продаж, аналитику в реальном времени</li>
+        <li><strong>Прозрачность</strong> — видите каждый звонок, лид и сделку</li>
+        <li><strong>Под ключ</strong> — от подбора персонала до отчетов по ROI</li>
       </ul>
       <div class="buttons">
         <a class="btn" href="https://t.me/doizv">Обсудить проект в Telegram</a>
@@ -186,11 +191,11 @@
     <div class="block">
       <h2>Партнерская программа</h2>
       <ul>
-        <li><strong>$2000 за каждого привлеченного клиента</strong> - выплаты без задержек</li>
-        <li><strong>Горячее предложение</strong> - конверсия 6% благодаря отработанной методике</li>
+        <li><strong>$2000 за каждого привлеченного клиента</strong> — выплаты без задержек</li>
+        <li><strong>Горячее предложение</strong> — конверсия 6% благодаря отработанной методике</li>
         <li><strong>Бонус +$500</strong> первым 3 партнерам</li>
-        <li><strong>Полная поддержка</strong> - мы сами ведем переговоры и закрываем сделки</li>
-        <li><strong>Готовые материалы</strong> - презентации, скрипты, ответы на возражения</li>
+        <li><strong>Полная поддержка</strong> — мы сами ведем переговоры и закрываем сделки</li>
+        <li><strong>Готовые материалы</strong> — презентации, скрипты, ответы на возражения</li>
       </ul>
       <div class="buttons">
         <a class="btn" href="https://t.me/+JgoYeT6PCDU0ZmRi">Стать партнером</a>
@@ -202,11 +207,11 @@
       <div class="testimonials">
         <div class="testimonial">
           <p>"За 3 месяца увеличили наши продажи в США на 217%. Операторы действительно с нейтральным акцентом."</p>
-          <div class="testimonial-author">- Директор по экспорту, пищевая компания</div>
+          <div class="testimonial-author">— Директор по экспорту, пищевая компания</div>
         </div>
         <div class="testimonial">
-          <p>"Как партнер заработал $8000 за месяц. Все честно - выплатили ровно то, что обещали."</p>
-          <div class="testimonial-author">- Маркетолог, Алматы</div>
+          <p>"Как партнер заработал $8000 за месяц. Все честно — выплатили ровно то, что обещали."</p>
+          <div class="testimonial-author">— Маркетолог, Алматы</div>
         </div>
       </div>
       <div class="buttons">
@@ -215,5 +220,9 @@
     </div>
   </div>
   <footer>© 2025 states.kz | Англоязычный колл-центр для казахстанского бизнеса</footer>
+
+  <!-- Скрипты -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="scripts/app.js"></script>
 </body>
 </html>
