--- a/index.html
+++ b/index.html
@@ -466,8 +466,8 @@
         <li><strong>Под ключ</strong> - от подбора персонала до отчетов по ROI</li>
       </ul>
       <div class="buttons">
-        <a class="btn" href="https://t.me/doizv" id="btn-telegram"><i class="fab fa-telegram"></i> Telegram</a>
-        <a class="btn" href="https://wa.me/77003339904" id="btn-whatsapp"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+        <a class="btn" href="https://t.me/yslma" id="btn-telegram"><i class="fab fa-telegram"></i> Telegram</a>
+        <a class="btn" href="https://wa.me/+12894828712" id="btn-whatsapp"><i class="fab fa-whatsapp"></i> WhatsApp</a>
       </div>
     </div>
 
@@ -482,7 +482,7 @@
       </ul>
       <div id="country-solution"></div>
       <div class="buttons">
-        <a class="btn" href="https://t.me/+JgoYeT6PCDU0ZmRi" id="btn-partner"><i class="fas fa-handshake"></i> Партнерство</a>
+        <a class="btn" href="https://t.me/yslma" id="btn-partner"><i class="fas fa-handshake"></i> Партнерство</a>
       </div>
     </div>
 
@@ -499,7 +499,7 @@
         </div>
       </div>
       <div class="buttons">
-        <a class="btn" href="https://wa.me/77003339904" id="btn-contact"><i class="fas fa-envelope"></i> Контакты</a>
+        <a class="btn" href="https://wa.me/+12894828712" id="btn-contact"><i class="fas fa-envelope"></i> Контакты</a>
       </div>
     </div>
 
@@ -590,23 +590,26 @@
     <div class="footer-content">
       <div class="footer-section">
         <h3 id="footer-contacts-heading">Контакты</h3>
-        <p><i class="fas fa-phone-alt"></i> <span id="footer-phone">+7 700 333 99 04</span></p>
-        <p><i class="fab fa-telegram"></i> <span id="footer-telegram">@doizv</span></p>
-        <p><i class="fab fa-whatsapp"></i> <span id="footer-whatsapp">+7 700 333 99 04</span></p>
+        <p><i class="fas fa-phone-alt"></i> <span id="footer-phone">+1 (289) 482-8712</span></p>
+        <p><i class="fab fa-telegram"></i> <span id="footer-telegram">@yslma</span></p>
+        <p><i class="fab fa-whatsapp"></i> <span id="footer-whatsapp">+1 (289) 482-8712</span></p>
       </div>
       <div class="footer-section">
         <h3 id="footer-hours-heading">Часы работы</h3>
-        <p id="footer-weekdays">Пн-Пт: 9:00 - 18:00</p>
+        <p id="footer-weekdays">Пн-Пт: 9:00 - 18:00 (EST)</p>
         <p id="footer-weekend">Сб-Вс: выходной</p>
       </div>
       <div class="footer-section">
         <h3 id="footer-legal-heading">Юридическая информация</h3>
-        <p id="footer-company">ТОО "States Export"</p>
-        <p id="footer-bin">БИН: 123456789012</p>
+        <p>STATES AVENUE GROUP, LLC</p>
+        <p>Document Number: L22000501811</p>
+        <p>FEI/EIN Number: 92-1263561</p>
+        <p>Address: 8362 PINES BLVD STE #288, PEMBROKE PINES, FL 33024</p>
+        <p>Registered Agent: MARIA GONZALEZ</p>
       </div>
     </div>
     <div class="footer-bottom" id="footer-bottom">
-      © 2025 states.kz | Англоязычный колл-центр для международного бизнеса
+      © 2025 STATES AVENUE GROUP, LLC | Англоязычный колл-центр для международного бизнеса
     </div>
   </footer>
 
@@ -813,7 +816,7 @@
       'US': {
         advantages: [
           "$40,000 complete sales service - results driven",
-          "African operators (perfect accent + 60% savings)",
+                   "African operators (perfect accent + 60% savings)",
           "Automated CRM system - full process control",
           "Complete transparency - see every call, lead and deal",
           "Turnkey solution - from staffing to ROI reports"
@@ -1240,10 +1243,10 @@
           contacts: "Байланыс",
           hours: "Жұмыс уақыты",
           legal: "Заңдық ақпарат",
-          company: 'ТОО "States Export"',
-          bin: "БСН: 123456789012",
-          copyright: "© 2025 states.kz | Халықаралық бизнес үшін ағылшын тілдік қоңырау орталығы",
-          weekdays: "Дс-Сс: 9:00 - 18:00",
+          company: 'STATES AVENUE GROUP, LLC',
+          bin: "Document Number: L22000501811",
+          copyright: "© 2025 STATES AVENUE GROUP, LLC | Халықаралық бизнес үшін ағылшын тілдік қоңырау орталығы",
+          weekdays: "Дс-Сс: 9:00 - 18:00 (EST)",
           weekend: "Сб-Жс: демалыс"
         }
       },
@@ -1281,10 +1284,10 @@
           contacts: "Контакты",
           hours: "Часы работы",
           legal: "Юридическая информация",
-          company: 'ТОО "States Export"',
-          bin: "БИН: 123456789012",
-          copyright: "© 2025 states.kz | Англоязычный колл-центр для международного бизнеса",
-          weekdays: "Пн-Пт: 9:00 - 18:00",
+          company: 'STATES AVENUE GROUP, LLC',
+          bin: "Document Number: L22000501811",
+          copyright: "© 2025 STATES AVENUE GROUP, LLC | Англоязычный колл-центр для международного бизнеса",
+          weekdays: "Пн-Пт: 9:00 - 18:00 (EST)",
           weekend: "Сб-Вс: выходной"
         }
       },
@@ -1322,10 +1325,10 @@
           contacts: "Contacts",
           hours: "Working Hours",
           legal: "Legal Information",
-          company: '"States Export" LLP',
-          bin: "BIN: 123456789012",
-          copyright: "© 2025 states.kz | English call center for international business",
-          weekdays: "Mon-Fri: 9:00 AM - 6:00 PM",
+          company: 'STATES AVENUE GROUP, LLC',
+          bin: "Document Number: L22000501811",
+          copyright: "© 2025 STATES AVENUE GROUP, LLC | English call center for international business",
+          weekdays: "Mon-Fri: 9:00 AM - 6:00 PM (EST)",
           weekend: "Sat-Sun: day off"
         }
       },
@@ -1363,10 +1366,10 @@
           contacts: "联系方式",
           hours: "工作时间",
           legal: "法律信息",
-          company: 'States Export有限责任公司',
-          bin: "商业识别号: 123456789012",
-          copyright: "© 2025 states.kz | 国际商务英语呼叫中心",
-          weekdays: "周一至周五: 9:00 - 18:00",
+          company: 'STATES AVENUE GROUP, LLC',
+          bin: "Document Number: L22000501811",
+          copyright: "© 2025 STATES AVENUE GROUP, LLC | 国际商务英语呼叫中心",
+          weekdays: "周一至周五: 9:00 - 18:00 (EST)",
           weekend: "周六周日: 休息"
         }
       },
@@ -1404,10 +1407,10 @@
           contacts: "اتصل بنا",
           hours: "ساعات العمل",
           legal: "معلومات قانونية",
-          company: 'شركة "States Export"',
-          bin: "الرقم التعريفي: 123456789012",
-          copyright: "© 2025 states.kz | مركز اتصال باللغة الإنجليزية للأعمال الدولية",
-          weekdays: "من الاثنين إلى الجمعة: 9:00 صباحًا - 6:00 مساءً",
+          company: 'STATES AVENUE GROUP, LLC',
+          bin: "Document Number: L22000501811",
+          copyright: "© 2025 STATES AVENUE GROUP, LLC | مركز اتصال باللغة الإنجليزية للأعمال الدولية",
+          weekdays: "من الاثنين إلى الجمعة: 9:00 صباحًا - 6:00 مساءً (EST)",
           weekend: "السبت والأحد: عطلة"
         },
         rtl: true
@@ -1446,10 +1449,10 @@
           contacts: "İletişim",
           hours: "Çalışma Saatleri",
           legal: "Yasal Bilgiler",
-          company: '"States Export" Ltd.',
-          bin: "Şti. No: 123456789012",
-          copyright: "© 2025 states.kz | Uluslararası işletmeler için İngilizce çağrı merkezi",
-          weekdays: "Pzt-Cuma: 9:00 - 18:00",
+          company: 'STATES AVENUE GROUP, LLC',
+          bin: "Document Number: L22000501811",
+          copyright: "© 2025 STATES AVENUE GROUP, LLC | Uluslararası işletmeler için İngilizce çağrı merkezi",
+          weekdays: "Pzt-Cuma: 9:00 - 18:00 (EST)",
           weekend: "Cmt-Paz: kapalı"
         }
       }
@@ -1595,10 +1598,10 @@
         $('#footer-contacts-heading').text(t.footer.contacts || "Contacts");
         $('#footer-hours-heading').text(t.footer.hours || "Working Hours");
         $('#footer-legal-heading').text(t.footer.legal || "Legal Information");
-        $('#footer-company').text(t.footer.company || 'LLP "States Export"');
-        $('#footer-bin').text(t.footer.bin || "BIN: 123456789012");
-        $('#footer-bottom').text(t.footer.copyright || "© 2025 states.kz | International Call Center");
-        $('#footer-weekdays').text(t.footer.weekdays || "Mon-Fri: 9:00 - 18:00");
+        $('#footer-company').text(t.footer.company || 'STATES AVENUE GROUP, LLC');
+        $('#footer-bin').text(t.footer.bin || "Document Number: L22000501811");
+        $('#footer-bottom').text(t.footer.copyright || "© 2025 STATES AVENUE GROUP, LLC | International Call Center");
+        $('#footer-weekdays').text(t.footer.weekdays || "Mon-Fri: 9:00 - 18:00 (EST)");
         $('#footer-weekend').text(t.footer.weekend || "Sat-Sun: day off");
       }
       
